--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-import": "^1.13.0",
     "bootstrap": "^4.5.3",
     "dva": "^2.4.1",
+    "gh-pages": "^3.1.0",
     "react": "^16.2.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.2.0"
